# effective-octo-enigma

./: README.md  pyproject.toml
integration-tests/: server.py  setup.py
src/csco_otel_python/: distro.py  scripts.py
src/otel_integration/: pbutil.py  run_integration_tests.py  util.py
src/otel_integration/test_scripts/: counter-csco.py  counter-splk.py
tests/: integration_tests.py  run_integration_tests.py  test_serialization.py  util.py
tests/fixtures/: metrics.pbstr  trace.pbstr
tests/integration_test_scripts/: counter.py
tests/integration_tests/: counter-csco.py  counter-splk.py  counter.py
tests/integration_tests/lib/: __init__.py
